basic layout completed. Quotes working.

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,25 @@
 </head>
 
 <body id="body">
+	<div class="text-center">
+		<!-- <img class="img-responsive" src="https://bcw.blob.core.windows.net/public/img/inspire.jpg" /> -->
+	</div>
+
 	<div id="weather">
 		Your Weather Template
 	</div>
 
 	<div id="quote">
-		The Quote
+		<!-- Quote goes here -->
 	</div>
 
 	<div id="todo">
 		<form onsubmit=""></form>
 		A Todo List
 	</div>
+
+
+
 
 
 
