--- a/public/index.html
+++ b/public/index.html
@@ -9,38 +9,109 @@
 
 <body id="body" background="">
 	<div class="container-fluid">
-		<div class="text-center">
-		</div>
+		<!-- <div class="text-center">
+		</div> -->
 
-		<br>
+		<!-- <br>
 		<div id="weather">
 			<!-- Weather goes here -->
-		</div>
+		<!-- </div> -->
 
-		<br>
-		<div id="quote">
+		<!-- <br>
+		<!-- <div id="quote">
 			<!-- Quote goes here -->
-		</div>
+		<!-- </div>  -->
 
-		<br>
-		<div id="todo">
+		<!-- <br> -->
+		<!-- <div id="todo">
 			<div id="status">count goes here</div>
 
 			<div id="todoList">
-			<!-- todo List goes here -->
-			</div>
+				<!-- todo List goes here -->
+		<!-- </div>
 
 			<form onsubmit="app.controllers.todoController.addTodoFromForm(event) ">
 				<input type="text" name="title" placeholder="New Todo">
 			</form>
+		</div> -->
+
+
+		<div class="row row1">
+			<div class="col-xs-3"></div>
+			<div class="col-xs-6"></div>
+			<div class="col-xs-3">
+				<div class="row report">
+					<div class="col-xs-4"></div>
+					<div class="col-xs-8">
+						<div id="weather">
+							<!-- weather goes here -->
+						</div>
+					</div>
+				</div>
+				<div class="row"></div>
+			</div>
 		</div>
 
 
+		<div class="row row2">
+			<div class="col-xs-3"></div>
+			<div class="col-xs-6">
+				<div class="center-text">
+					<!-- Clock and Messages goes here -->
+					<h1>
+						Clock and Messages goes here
+					</h1>
+				</div>
+			</div>
+			<div class="col-xs-3"></div>
+		</div>
+
+
+		<div class="row row3">
+			<div class="col-xs-3">
+				<!-- Image info goes here -->
+				<div class="row row4"></div>
+				<div class="row row4"></div>
+				<div class="row row4">
+					<div id="image-info">
+						image info here
+					</div>
+				</div>
+
+
+			</div>
+			<div class="col-xs-6">
+				<!-- Quotes goes here -->
+				<div class="row row4"></div>
+				<div class="row row4"></div>
+				<div class="row row4 row5">
+					<div id="quote">
+						<!-- Quote goes here -->
+					</div>
+				</div>
+
+
+
+			</div>
+
+			<div class="col-xs-3">
+				<div class="row dark">
+					<div id="todo">
+						<div id="status">count goes here</div>
+
+						<div id="todoList">
+							<!-- todo List goes here -->
+						</div>
+
+						<form id="theForm" onsubmit="app.controllers.todoController.addTodoFromForm(event) ">
+							<input type="text" name="title" placeholder="New Todo">
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</div>
 	</div>
-
-
-
-
 
 	<!--JS Libraries-->
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
